(lang dune 3.12)

(name flowcaml)

(generate_opam_files true)

(source
 (github jakequinter/flowcaml))

(authors "Jake Quinter")

(maintainers "Jake Quinter")

(license LICENSE)

(documentation https://github.com/jakequinter/flowcaml)

(package
 (name flowcaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
